Add AI Analises

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ VITE_SUPABASE_ANON_KEY=your-anon-key-here
 VITE_APP_NAME=Health Dashboard
 VITE_APP_URL=https://meter-pwa-production.up.railway.app
 
+# AI Analysis API
+# URL of the external API that analyzes images and extracts health metrics
+VITE_AI_ANALYSIS_API_URL=https://webhook-processor-production-0a16.up.railway.app/webhook/analizeimage
+
 # Development
 # Uncomment for local development
 # VITE_APP_URL=http://localhost:5173
