--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ VITE_APP_URL=https://meter-pwa-production.up.railway.app
 
 # AI Analysis API
 # URL of the external API that analyzes images and extracts health metrics
+# Audio analysis URL will be automatically derived by replacing '/analizeimage' with '/analizeaudio'
 VITE_AI_ANALYSIS_API_URL=https://webhook-processor-production-0a16.up.railway.app/webhook/analizeimage
 
 # Development
